# brokerage-statement-importer-rs

./: Cargo.toml  README.md  docker-compose.yaml
src/: importer_registry.rs  lib.rs  main.rs  path_match.rs  statement_importer.rs  writers.rs
src/db/: client.rs  mod.rs
src/db/migration/: mod.rs
src/ibkr_flex_statement_importer/: mod.rs
src/importer/: mod.rs
tests/: tests.rs
tests/fixtures/: mod.rs
tests/fixtures/data/: ibkr_flex_single_trade.xml
