[package]
name = "ibkr-statement-importer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.37", features = ["derive"] }
dotenvy = { git = "https://github.com/allan2/dotenvy" }
futures = "0.3.31"
glob = "0.3.2"
ibkr-flex-statement = "0.3"
mongodb = "3.2.3"
mongodb-migrator = "0.1.8"
serde = "1.0.219"
serde_derive = "1.0.219"
testcontainers = "0.23.3"
tokio = "1.44.2"
