[package]
name = "brokerage-statement-importer"
version = "0.1.0"
edition = "2024"
description = "Command-line tool to import brokerage statements into a database for later analysis."
repository = "https://github.com/tfiala/brokerage-statement-importer-rs"

[dependencies]
anyhow = "1.0.98"
brokerage-db = "0.2.1"
clap = { version = "4.5.37", features = ["derive"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", rev = "86c0d6dd2938e615135813df9e3274bf8f42c455" }
futures = "0.3.31"
glob = "0.3.2"
ibkr-flex-statement = "0.3"
mongodb = "3.2.3"
serde = "1.0.219"
tokio = "1.44.2"

[dev-dependencies]
version-sync = "0.9.5"
