[package]
name = "brokerage-statement-importer"
version = "0.1.1"
edition = "2024"
description = "Command-line tool to import brokerage statements into a database for later analysis."
repository = "https://github.com/tfiala/brokerage-statement-importer-rs"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
brokerage-db = "0.2.1"
clap = { version = "4.5.37", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
glob = "0.3.2"
ibkr-flex-statement = "0.3"
mongodb = "3.2.3"
serde = "1.0.219"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.0", features = ["mongo"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
rstest = "0.25.0"
version-sync = "0.9.5"
